# pyfm2d

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md
.github/workflows/: build_and_deploy.yaml  publish_pypi.yml  python-publish.yaml  python-publish.yml  test.yaml
examples/: Benchmark_1D-ray_theory.ipynb  FMM_demo Surface Wave.ipynb  FMM_demo checkerboard.ipynb  FMM_demo_borehole.ipynb  FMM_demo_borehole_parallel.ipynb  PyKonal_constant_velocity_model.ipynb  benchmark_1d_ray_theory.ipynb  fmm_demo_borehole_parallel.ipynb  fmm_demo_checkerboard.ipynb  pykonal_constant_velocity_model_in_cartesian_coordinates.ipynb
fm2d/: CMakeLists.txt  fm2dss.f90
fm2dss/: CMakeLists.txt  fm2dss.f90
gallery/: index.html  readme.md
src/fm2d/: fm2dss.f90
src/pyfm2d/: __init__.py  _jip.py  _pyfm2dss.py  _wavetracker.py  bases.py  fastmarching.py  jip.py  wavetracker.py
src/pyfm2dss/: __init__.py  _bases.py  _pyfm2dss.py  _wavetracker.py  bases.py  fastmarching.py  jip.py  pyfm2dss.py  wavetracker.py
test/: fm2dss.in  test_fastmarching.py  test_fm2d.py  test_fm2dss.py  test_fmmin2d.py  test_run.py  test_run2.py  test_wavetracker.py
validation/: frechet.out  raypath.out  travelt.out
