[build-system]
requires = ["scikit-build-core[rich,pyproject]", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfm2d"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "cartopy>=0.2.3",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pyrr>=0.10.3",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.3.4",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/pyfm2d/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
